Fix security agent errors
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>